WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212633
Fix broken Windows build.
https://bugs.webkit.org/show_bug.cgi?id=212633
Summary
Fix broken Windows build.
Mark Lam
Reported
2020-06-02 06:53:10 PDT
See
https://ews-build.webkit.org/#/builders/10/builds/19884
.
Attachments
speculative fix.
(1.17 KB, patch)
2020-06-02 07:01 PDT
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-06-02 07:01:22 PDT
Created
attachment 400815
[details]
speculative fix.
Yusuke Suzuki
Comment 2
2020-06-02 07:11:02 PDT
Comment on
attachment 400815
[details]
speculative fix. View in context:
https://bugs.webkit.org/attachment.cgi?id=400815&action=review
r=me
> Source/WebCore/html/HTMLCanvasElement.cpp:1022 >
Is needsPreparationForDisplay OK? It also includes WebGLRenderingContextBase
Mark Lam
Comment 3
2020-06-02 07:13:14 PDT
(In reply to Yusuke Suzuki from
comment #2
)
> Comment on
attachment 400815
[details]
> speculative fix. > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=400815&action=review
> > r=me > > > Source/WebCore/html/HTMLCanvasElement.cpp:1022 > > > > Is needsPreparationForDisplay OK? It also includes WebGLRenderingContextBase
Thanks for catching that. It's strange that the bot didn't complain about it. I'll add the WEBGL guard around it too.
Mark Lam
Comment 4
2020-06-02 07:18:05 PDT
Landed in
r262418
: <
http://trac.webkit.org/r262418
>.
Radar WebKit Bug Importer
Comment 5
2020-06-02 07:19:15 PDT
<
rdar://problem/63873861
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug