Fix broken Windows build. https://bugs.webkit.org/show_bug.cgi?id=212633

Reviewed by Yusuke Suzuki.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::needsPreparationForDisplay):
(WebCore::HTMLCanvasElement::prepareForDisplay):



Canonical link: https://commits.webkit.org/225465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262418 268f45cc-cd09-0410-ab3c-d52691b4dbfc